# nesjam2026

./: CMakeLists.txt
include/: bunny.h  control.h  entity.h  game.h  global.h  player.h  render.h  terrain.h  time_cycle.h
src/: bunny.c  control.c  entity.c  game.c  global.c  main.c  player.c  render.c  terrain.c  time_cycle.c
